<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/circle"
        android:title="@string/circle"
        android:icon="@drawable/iconcircle"
        app:showAsAction="always"/>

    <item android:id="@+id/triangle"
        android:title="@string/triangle"
        android:icon="@drawable/icontrinagle"
        app:showAsAction="always"/>

    <item android:id="@+id/square"
        android:title="@string/square"
        android:icon="@drawable/iconsquare"
        app:showAsAction="always"/>

    <item android:id="@+id/rectangle"
        android:title="@string/rectangle"
        android:icon="@drawable/iconrectangle"
        app:showAsAction="always"/>

</menu>