<?xml version="1.0" encoding="utf-8"?>
<ScrollView
xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".CalculatingAreaRectangle">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:paddingBottom="10dp"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="370dp"
            android:layout_height="307dp"
            android:src="@drawable/rectangle"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <EditText
            android:id="@+id/value_a_rectangle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_margin="20dp"
            android:layout_marginBottom="300dp"
            android:autofillHints=""
            android:hint="@string/value_a_rectangle"
            android:inputType="numberDecimal"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView4"
            app:layout_constraintVertical_bias="0.0" />

        <EditText
            android:id="@+id/value_b_rectangle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_margin="20dp"
            android:layout_marginBottom="300dp"
            android:autofillHints=""
            android:hint="@string/value_b_rectangle"
            android:inputType="numberDecimal"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/value_a_rectangle"
            app:layout_constraintVertical_bias="0.0" />

        <Button
            android:id="@+id/calculation_rectangle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/calculation"
            android:onClick="returnMessage"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/value_b_rectangle"
            app:layout_constraintVertical_bias="0.112" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>